--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,28 @@
-version: 2.1.4
+version: 2.1
 orbs:
   ruby: circleci/ruby@0.1.2 
 
 jobs:
+  # build:
+  #   docker:
+  #     - image: circleci/ruby:2.6.3-stretch-node
+  #   executor: ruby/default
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: Which bundler?
+  #         command: bundle -v
+  #     - ruby/bundle-install
+
+  build:
+     docker:
+       - image: circleci/ruby:2.6.3p62
+     steps:
+       - checkout
+       - run: echo "A first hello"
   build:
     docker:
-      - image: circleci/ruby:2.6.3-stretch-node
-    executor: ruby/default
+      - image: circleci/ruby:2.6.3p62
     steps:
       - checkout
-      - run:
-          name: Which bundler?
-          command: bundle -v
-      - ruby/bundle-install
+      - run: echo "A first hello"
