--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,15 @@ jobs:
   build:
     docker:
       - image: circleci/ruby:2.6.3-stretch-node
+      - image: circleci/mysql:8.0.4
+        environment:
+          MYSQL_ROOT_PASSWORD: rootpw
+          MYSQL_DATABASE: test_db
+          MYSQL_USER: user
+          MYSQL_PASSWORD: passw0rd
     executor: ruby/default
     steps:
       - checkout
-      - run: "Hello Roli Boli"
+      - run: # Install dependencies
+        name: Bundle Install
+        command: bundle install
