--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,15 +6,16 @@ jobs:
   build:
     docker:
       - image: circleci/ruby:2.6.3-stretch-node
+        environment:
+          RAILS_ENV: test
+
       - image: circleci/mysql:8.0.4
         environment:
           MYSQL_ROOT_PASSWORD: rootpw
-          MYSQL_DATABASE: test_db
+          MYSQL_DATABASE: tms_test
           MYSQL_USER: user
           MYSQL_PASSWORD: passw0rd
     executor: ruby/default
     steps:
       - checkout
-      - run: # Install dependencies
-        name: Bundle Install
-        command: bundle install
+      - run: "Hello"
