--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,4 @@ jobs:
     executor: ruby/default
     steps:
       - checkout
-      - run:
-        name: Installing Gems
-        command: bundle install
+      - run: bundle install
