--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,4 +18,5 @@ jobs:
     executor: ruby/default
     steps:
       - checkout
+      - run: gem install bundler:2.1.4
       - run: bundle install
